--- a/i18n.md
+++ b/i18n.md
@@ -4,7 +4,7 @@
 
 Directory `crates/i18n/assets` contains the locale subdirectories, each subdirectory representing one locale, for example `en-US` or `nl-NL`. In the locale subdirectory there is `main.ftl` file which contains all localization resources. Each localization entry is in the format `key = value`.
 Keys are prefixed with the category, for example `error-connection-failed` or `label-username`.
-Every file also contains the entries which represent the supported locales, which start with `lang-` prefix. For example: `language-english`, `language-german`, etc. The base file for translation is `en-US/main.ftl` which contains English strings.
+Every file also contains the entries which represent the supported locales, which start with `lang-` prefix. For example: `language-en-US`, `language-de-DE`, etc. The base file for translation is `en-US/main.ftl` which contains English strings.
 
 ## Translation tasks
 
@@ -12,7 +12,7 @@ There are three defined translation tasks. Before proceeding, ask what task to p
 
 ## Task 1: adding a new locale support
 
-The new locale will be further referred as `$LOCALE`. Ask for the exact locale name if it is not provided when given this task. It must be in the correctform of `xx-YY`, for example `jp-JP`. If it's not given in the correct form, do not proceed.
+The new locale will be further referred as `$LOCALE`. Ask for the exact locale name if it is not provided when given this task. Locale can be in the short form of xx-YY, or specified as a language. If it is unrecognized, do not proceed.
 
 Add a localization support for $LOCALE by doing the following:
 
