Typo in i18n.md

--- a/i18n.md
+++ b/i18n.md
@@ -41,6 +41,6 @@ Add a localization support for $LOCALE by doing the following:
 
 * Do not modify the existing entries.
 * Keep the original file structure intact, grouped by the key type.
-* When adding new entries, add them to the corresponding group with the same porefix.
+* When adding new entries, add them to the corresponding group with the same prefix.
 * Keep the {$template} parameters enclosed in braces untranslated, for example `{$event}`
 * Keep all the comments in the files
