Added AI policy notice to the contribution chapter in the README file

--- a/i18n.md
+++ b/i18n.md
@@ -4,7 +4,7 @@
 
 Directory `crates/i18n/assets` contains the locale subdirectories, each subdirectory representing one locale, for example `en-US` or `nl-NL`. In the locale subdirectory there is `main.ftl` file which contains all localization resources. Each localization entry is in the format `key = value`.
 Keys are prefixed with the category, for example `error-connection-failed` or `label-username`.
-Every file also contains the entries which represent the supported locales, which start with `lang-` prefix. For example: `language-en-US`, `language-de-DE`, etc. The base file for translation is `en-US/main.ftl` which contains English strings.
+Every file also contains the entries which represent the supported locales, which start with `language-` prefix. For example: `language-en-US`, `language-de-DE`, etc. The base file for translation is `en-US/main.ftl` which contains English strings.
 
 ## Translation tasks
 
