Minor fix to i18n

--- a/i18n.md
+++ b/i18n.md
@@ -8,18 +8,18 @@ Every file also contains the entries which represent the supported locales, whic
 
 ## Translation tasks
 
-There are three defined translation tasks. Before proceeding, ask what task to perform. Do one task at a time.
+There are three defined translation tasks. Before proceeding, ask what task to perform, if not given explicitly. Do one task at a time.
 
 ## Task 1: adding a new locale support
 
 The new locale will be further referred as `$LOCALE`. Ask for the exact locale name if it is not provided when given this task. Locale can be in the short form of xx-YY, or specified as a language. If it is unrecognized, do not proceed.
 
-Add a localization support for $LOCALE by doing the following:
+Add localization support for $LOCALE by doing the following:
 
 * create `crates/i18n/assets/$LOCALE` directory.
 * copy the base translation file `crates/i18n/assets/en-US/main.ftl` into this directory.
 * translate ALL entries in the copied file to the target locale $LOCALE.
-* add a `language-$LOCALE` to all existing translation files and to the newly created file. Translate that entry in the each of the files to the locale which this file represents.
+* add a `language-$LOCALE` to all existing translation files and to the newly created file. Translate that entry in each of the files to the locale which this file represents.
 
 ## Task 2: adding missing translations from the base English file to all other locales
 
